changed background colors and fixed gaps

--- a/style.css
+++ b/style.css
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,300;0,400;1,300;1,400&display=swap');
 
+:root{
+    --primary-color: #eeff00;
+}
+
 @media screen and (max-width: 800px) {
     .leftside{
         max-width: 100%;
@@ -17,10 +21,11 @@
         margin-left: 0px;
     }
 }
-
-:root{
-    --primary-color: #23925b;
+body{
+    margin: 0;
+    padding: 0;
 }
+
 
 *{
     box-sizing: border-box;
@@ -30,29 +35,42 @@
 img{
     max-width: 200px;
     height: auto;
-    border-radius: 50000px
+    border-radius: 50%;
+}
+.leftside h2{
+    color: rgb(22, 22, 22);
 }
 
 .leftside{
     color: rgb(199, 199, 199);
-    background-color: #1a633e;
+    background-color: #2c2e2d;
     max-width: 100%;
     max-height: 100%;
     height: auto;
     text-align: center;
     float: left;
     min-width: 400px;
+    padding: 0;
+    margin: 0;
+    overflow: hidden;
 }
 
 .content{
     display: flex;
     justify-content: left;
 }
+.rightside h1, h2, p{
+    padding: 25px;
+}
 
 .rightside{
+    color: white;
     flex-direction: column;
-    overflow: auto;
-    margin-left: 20px;
+    overflow: hidden;
+    width: 100%;
+    background-color: rgb(48, 48, 48);
+    padding: 0;
+    margin-left: 5px;
 }
 .yhteystiedot p{
     margin: 0 auto;
